# vba-editRD

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  README.md  README.rst  access-vba.spec  build.py  build_release.py  create_binaries.py  excel-vba.spec  powerpoint-vba.spec  pyproject.toml  requirements.txt  setup.cfg  word-vba.spec
.github/: copilot-instructions.md
.github/workflows/: lint.yaml  publish.yaml  publish.yml  test.yaml
_workbench/: PQuery.xlsm  import pytest.py
_workbench/copilot/: 2005-09-07.onderhold.chat.extend.md  2024-09-17.onderhold.harden_COM.md  2025-09-04.onderhold.chat.json  2025-09-04.onderhold.chat.md  2025-09-04.rubberduck.onderhold.chat.md  2025-09-08.onderhold.chat.com_background.test_refactor.md  init__py_and_versioning.md
_workbench/testbed/: excel-vba.test_config.toml  test_doc.xlsm
_workbench/testbed/manually/: MyTestModule.bas
_workbench/testbed/src/vba/: DieseArbeitsmappe.cls  Tabelle1.cls  TestModule.bas
configs/: .gitkeep
docs/: MANUAL.md  MOVE-TO-DEV-PERSONAL.md  README.md
docs/development/: BRANCHING.md  BUILDING.md  DEV-PERSONAL.md  DEVELOPMENT.md  ROADMAP.md  TESTING.md  excel-vba.sample_config.toml  release_checklist.md  release_for_newbies.md  testfile_reorganization.md  vfs_draft.md  virutal_filesystem.design.draft.md
docs/releases/: v0.4.0a2-release-notes.md  v0.4.0a3-release-notes.md  v0.4.1a1-release-notes.md
scripts/: .gitkeep  move-to-dev-personal.ps1  release.ps1
scripts/scripts/: release.ps1
src/vba_edit/: __init__.py  access_vba.py  cli_common.py  excel_vba.py  exceptions.py  office_cli.py  office_vba.py  path_utils.py  powerpoint_vba.py  utils.py  word_vba.py
src/vba_edit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/vba_editRD.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_cli.py  test_excel_vba.py  test_excel_vba_cli.py  test_office_vba.py  test_utils.py  test_word_vba.py
tests/cli/: __init__.py  conftest.py  helpers.py  test_basic.py  test_config.py  test_debugging.py  test_integration.py
tools/: .gitkeep
(+1 files in other folders)
